feat: add basic products

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,15 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>hello world</h1>
+  <header><h1>Online store</h1></header>
+  <main>
+    <section class="filters">
+
+    </section>
+    <section class="products">
+      
+    </section>
+  </main>
+  <footer></footer>
 </body>
 </html>
