feat: add basic functional shopping cart

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,12 @@
   <title>Document</title>
 </head>
 <body>
-  <header><h1>Online store</h1></header>
+  <header class="header">
+    <h1>Online store</h1>
+    <div class="basket">
+      <span class="number-goods">0</span>
+    </div>
+  </header>
   <main>
     <section class="filters">
 
