--- a/src/index.html
+++ b/src/index.html
@@ -1,52 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-  <title>Online store</title>
-</head>
-<body>
-  <div class="container">
-  <div class="alert">
-    <h2>Cart max exceeded!</h2>
-  </div>
-</div>
-  <header class="header">
-    <h1>Online store</h1>
-    <div class="basket">
-      <span class="number-goods">0</span>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+      crossorigin="anonymous"
+    ></script>
+    <title>Online store</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="alert">
+        <h2>Cart max exceeded!</h2>
+      </div>
     </div>
-  </header>
-  <main>
-    <section class="filters">
-      <div class="input-group mb-3">
-        <div class="input-group-prepend" id="button-addon3">
-          <button class="btn btn-outline-secondary" type="button">Reset</button>
-          <button class="btn btn-outline-secondary" type="button">Reset filters</button>
-        </div>
-        <input type="text" class="form-control" placeholder="Search..." aria-label="Пример текста с двумя кнопками" aria-describedby="button-addon3">
+    <header class="header">
+      <h1>Online store</h1>
+      <div class="basket">
+        <span class="number-goods">0</span>
       </div>
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
-          Sorting
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <div class="dropdown-item sort-name">Title: A-Z</div>
-          <div class="dropdown-item sort-name-revers">Title: Z-A</div>
-          <div class="dropdown-item sort-year">Year: ascending</div>
-          <div class="dropdown-item sort-year-revers">Year: descending</div>
+    </header>
+    <main>
+      <section class="search-sort">
+        <div class="input-group mb-3">
+          <div class="input-group-prepend" id="button-addon3">
+            <button class="btn btn-outline-secondary" type="button">
+              Reset
+            </button>
+            <button class="btn btn-outline-secondary" type="button">
+              Reset search-sort
+            </button>
+          </div>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Search..."
+            aria-label="Пример текста с двумя кнопками"
+            aria-describedby="button-addon3"
+          />
         </div>
+        <div class="dropdown">
+          <button
+            class="btn btn-secondary dropdown-toggle"
+            type="button"
+            id="dropdownMenuButton"
+            data-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Sorting
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <div class="dropdown-item sort-name">Title: A-Z</div>
+            <div class="dropdown-item sort-name-revers">Title: Z-A</div>
+            <div class="dropdown-item sort-year">Year: ascending</div>
+            <div class="dropdown-item sort-year-revers">Year: descending</div>
+          </div>
+        </div>
+      </section>
+      <div class="container-products">
+        <section class="filters">
+          <h5>Filter year</h5>
+          <div class="slider-year"></div>
+          <h5>Filter price</h5>
+          <div class="slider-price"></div>
+        </section>
+        <section class="products"></section>
       </div>
-    </section>
-    <section class="products">
-      
-    </section>
-  </main>
-  <footer></footer>
-  
-</body>
+    </main>
+    <footer></footer>
+  </body>
 </html>
