feat: add logic of class Filter

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
               Reset
             </button>
             <button class="btn btn-outline-secondary" type="button">
-              Reset search-sort
+              Reset sort
             </button>
           </div>
           <input
@@ -82,11 +82,11 @@
           <div class="slider-hull-width"></div>
           <h5>Filter color</h5>
           <ul class="list-filter">
-            <li class="element-filter"><label class="label-color"><input type="checkbox" value="1" class="input-color red"><span class="span-color span-red"></span></label></li>
-            <li class="element-filter"><label class="label-color"><input type="checkbox" value="1" class="input-color blue"><span class="span-color span-blue"></span></label></li>
-            <li class="element-filter"><label class="label-color"><input type="checkbox" value="1" class="input-color black"><span class="span-color span-black"></span></label></li>
-            <li class="element-filter"><label class="label-color"><input type="checkbox" value="1" class="input-color grey"><span class="span-color span-grey"></span></label></li>
-            <li class="element-filter"><label class="label-color"><input type="checkbox" value="1" class="input-color white"><span class="span-color span-white"></span></label></li>
+            <li class="element-filter"><label class="label-color"><input type="checkbox" value="red" class="input-color red"><span class="span-color span-red"></span></label></li>
+            <li class="element-filter"><label class="label-color"><input type="checkbox" value="blue" class="input-color blue"><span class="span-color span-blue"></span></label></li>
+            <li class="element-filter"><label class="label-color"><input type="checkbox" value="black" class="input-color black"><span class="span-color span-black"></span></label></li>
+            <li class="element-filter"><label class="label-color"><input type="checkbox" value="grey" class="input-color grey"><span class="span-color span-grey"></span></label></li>
+            <li class="element-filter"><label class="label-color"><input type="checkbox" value="white" class="input-color white"><span class="span-color span-white"></span></label></li>
           </ul>
           <h5>Filter name</h5>
           <ul class="list-filter">
