feat: add reset filters, sort and search

--- a/src/index.html
+++ b/src/index.html
@@ -38,10 +38,10 @@
       <section class="search-sort">
         <div class="input-group mb-3">
           <div class="input-group-prepend" id="button-addon3">
-            <button class="btn btn-outline-secondary" type="button">
-              Reset
+            <button class="btn btn-outline-secondary reset" type="button">
+              Reset filters
             </button>
-            <button class="btn btn-outline-secondary" type="button">
+            <button class="btn btn-outline-secondary reset-sort" type="button">
               Reset sort
             </button>
           </div>
@@ -50,6 +50,8 @@
             class="form-control"
             placeholder="Search..."
             aria-describedby="button-addon3"
+            autofocus
+            autocomplete="false"
           />
           <button class="clean-search">	
             &#10006;</button>
