feat: add localStorage

--- a/src/index.html
+++ b/src/index.html
@@ -63,9 +63,7 @@
             id="dropdownMenuButton"
             data-toggle="dropdown"
             aria-expanded="false"
-          >
-            Sorting
-          </button>
+          >Sorting</button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <div class="dropdown-item sort-name">Title: A-Z</div>
             <div class="dropdown-item sort-name-revers">Title: Z-A</div>
